[gd_scene load_steps=9 format=3 uid="uid://c1n5n0n0kh2l8"]

[ext_resource type="Script" path="res://Scripts/Login.gd" id="1_jngfd"]
[ext_resource type="FontFile" uid="uid://doeucwsjnxsn5" path="res://Fonts/Minecraftia-Regular.ttf" id="3_6rttx"]
[ext_resource type="FontFile" uid="uid://d3mkrcxyvfst7" path="res://Fonts/Minecraft.ttf" id="4_wmqwd"]

[sub_resource type="Gradient" id="Gradient_ws3x6"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.129412, 0.14902, 0.247059, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pny07"]
gradient = SubResource("Gradient_ws3x6")

[sub_resource type="TileSet" id="TileSet_tj6os"]
tile_size = Vector2i(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tvry"]

[sub_resource type="Theme" id="Theme_7343q"]
default_font = ExtResource("3_6rttx")
AcceptDialog/styles/panel = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource("StyleBoxFlat_1tvry")
Button/styles/normal = null
Button/styles/pressed = null
CheckBox/styles/disabled = null
CheckBox/styles/focus = null
CheckBox/styles/hover = null
CheckBox/styles/hover_pressed = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
CodeEdit/styles/completion = null
CodeEdit/styles/focus = null
CodeEdit/styles/normal = null
CodeEdit/styles/read_only = null
ColorPickerButton/styles/disabled = null
ColorPickerButton/styles/focus = null
ColorPickerButton/styles/hover = null
ColorPickerButton/styles/normal = null
ColorPickerButton/styles/pressed = null
ColorPresetButton/styles/preset_fg = null
FlatButton/styles/disabled = null
FlatButton/styles/hover = null
FlatButton/styles/normal = null
FlatButton/styles/pressed = null
FlatMenuButton/styles/disabled = null
FlatMenuButton/styles/hover = null
FlatMenuButton/styles/normal = null
FlatMenuButton/styles/pressed = null
GraphEdit/styles/menu_panel = null
GraphEdit/styles/panel = null
GraphEditMinimap/styles/camera = null
GraphEditMinimap/styles/node = null
GraphEditMinimap/styles/panel = null
GraphNode/styles/panel = null
GraphNode/styles/panel_selected = null
GraphNode/styles/slot = null
GraphNode/styles/titlebar = null
GraphNode/styles/titlebar_selected = null
GraphNodeTitleLabel/styles/normal = null
HScrollBar/styles/grabber = null
HScrollBar/styles/grabber_highlight = null
HScrollBar/styles/grabber_pressed = null
HScrollBar/styles/scroll = null
HScrollBar/styles/scroll_focus = null
HSeparator/styles/separator = null
HSlider/styles/grabber_area = null
HSlider/styles/grabber_area_highlight = null
HSlider/styles/slider = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/focus = null
ItemList/styles/hovered = null
ItemList/styles/panel = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null
Label/styles/normal = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null
LinkButton/styles/focus = null
MenuBar/styles/disabled = null
MenuBar/styles/hover = null
MenuBar/styles/normal = null
MenuBar/styles/pressed = null
MenuButton/styles/disabled = null
MenuButton/styles/focus = null
MenuButton/styles/hover = null
MenuButton/styles/normal = null
MenuButton/styles/pressed = null
OptionButton/styles/disabled = null
OptionButton/styles/disabled_mirrored = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/hover_mirrored = null
OptionButton/styles/normal = null
OptionButton/styles/normal_mirrored = null
OptionButton/styles/pressed = null
OptionButton/styles/pressed_mirrored = null
Panel/styles/panel = null
PanelContainer/styles/panel = null
PopupDialog/styles/panel = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/separator = null
PopupPanel/styles/panel = null
ProgressBar/styles/background = null
ProgressBar/styles/fill = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null
ScrollContainer/styles/panel = null
TabBar/styles/button_highlight = null
TabBar/styles/button_pressed = null
TabBar/styles/tab_disabled = null
TabBar/styles/tab_focus = null
TabBar/styles/tab_hovered = null
TabBar/styles/tab_selected = null
TabBar/styles/tab_unselected = null
TabContainer/styles/panel = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_focus = null
TabContainer/styles/tab_hovered = null
TabContainer/styles/tab_selected = null
TabContainer/styles/tab_unselected = null
TabContainer/styles/tabbar_background = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null
TooltipPanel/styles/panel = null
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/focus = null
Tree/styles/panel = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null
VSeparator/styles/separator = null
VSlider/styles/grabber_area = null
VSlider/styles/grabber_area_highlight = null
VSlider/styles/slider = null
Window/styles/embedded_border = null
Window/styles/embedded_unfocused_border = null

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jngfd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_pny07")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_tj6os")
format = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 17.0
offset_right = 40.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_7343q")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username
"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true

[node name="Login" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6rttx")
text = "Register"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = -48.0
offset_right = 81.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_wmqwd")
theme_override_font_sizes/font_size = 30

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 154.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_6rttx")
theme_override_font_sizes/font_size = 26
text = "BACK"
flat = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.5
offset_right = 176.5
offset_bottom = 177.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_wmqwd")
theme_override_font_sizes/font_size = 46
text = "LOGIN"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
